--- a/index.html
+++ b/index.html
@@ -25,39 +25,49 @@
 
         const g = svg.append("g");
 
-        const numNodes = 50;
+        const numNodes = 1000; // Increase node count for denser look
         const centerX = width / 2;
         const centerY = height / 2;
-        const spiralFactor = 10; // Adjust for tighter or looser spirals
+        const spiralFactor = 7; 
+        const tiltAngle = 30 * (Math.PI / 180); // Tilt effect
+        const dustFactor = 0.1; // Add random dust and nebula around the nodes
 
         const nodes = d3.range(numNodes).map(i => {
-            const angle = i * 0.3; // Controls the spiral shape
+            const angle = i * 0.25 + Math.random() * 0.1; // Small randomness to the spiral
+            const radius = i * spiralFactor + Math.random() * dustFactor * i; // Add some variance in radius
+            
+            // Apply elliptical scaling and tilt transformation with dust effect
             return {
-                x: centerX + Math.cos(angle) * i * spiralFactor,
-                y: centerY + Math.sin(angle) * i * spiralFactor,
-                r: Math.random() * 5 + 2
+                x: centerX + Math.cos(angle) * radius * 2 + Math.random() * dustFactor, // Spread out slightly
+                y: centerY + Math.sin(angle) * radius * Math.sin(tiltAngle) + Math.random() * dustFactor, // Tilt with randomness
+                r: Math.random() * 3 + 1, // Random radius for nodes
+                opacity: Math.random() * 0.7 + 0.3, // Random opacity for a fading effect
+                color: d3.scaleSequential(d3.interpolateRainbow)(Math.random()), // Random color from rainbow scale
+                blur: Math.random() * 3 + 1 // Random blur effect for stars
             };
         });
 
-        g.selectAll("circle")
+        // Add some nebulae/dust clouds (semi-transparent nodes scattered around)
+        const dustNodes = d3.range(numNodes / 5).map(i => {
+            const angle = Math.random() * Math.PI * 2; // Random angle
+            const radius = Math.random() * (width / 3); // Random radius for dust
+            return {
+                x: centerX + Math.cos(angle) * radius,
+                y: centerY + Math.sin(angle) * radius,
+                r: Math.random() * 10 + 5, // Larger size for nebulae effect
+                opacity: Math.random() * 0.3 + 0.1, // Faint nebula effect
+                color: `rgba(255, 255, 255, ${Math.random() * 0.5 + 0.1})` // Light dust cloud color with random opacity
+            };
+        });
+
+        // Create stars (nodes)
+        g.selectAll("circle.star")
             .data(nodes)
             .enter().append("circle")
+            .attr("class", "star")
             .attr("cx", d => d.x)
             .attr("cy", d => d.y)
             .attr("r", d => d.r)
-            .attr("fill", "white")
-            .attr("stroke", "rgba(255, 255, 255, 0.5)")
-            .attr("stroke-width", 4)
-            .style("filter", "blur(5px)");
-
-        // Zoom and Pan
-        const zoom = d3.zoom()
-            .scaleExtent([0.5, 5])
-            .on("zoom", (event) => {
-                g.attr("transform", event.transform);
-            });
-
-        svg.call(zoom);
-    </script>
-</body>
-</html>
+            .attr("fill", d => d.color)  // Using the color scale for stars
+            .attr("opacity", d => d.opacity)
+            .attr("stroke", "rgba(255
